--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                     </label>
                     <a href="forgotpassword.html">Forgot Password?</a>
                 </div>
-                <button class="w-100 btn btn-lg btn-primary" type="button">Sign in</button>
+                <button class="w-100 btn btn-lg btn-primary" type="button" onclick="validation()">Sign in</button>
                 <p class="mt-3 mb-3 text-muted">Don't have an Account? <a href="signup.html">Signup</a></p>
             </form>
         </main>
