--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
 </body>
 
 <script src="js/bootstrap.bundle.min.js"></script>
+<script src="js/sweetalert2.min.js"></script>
 <script src="js/products.js"></script>
-<script src="js/script.js"></script>
 <script src="js/component.script.js"></script>
+<script src="js/script.js"></script>
 
 </html>
