--- a/index.html
+++ b/index.html
@@ -151,34 +151,7 @@
         </div>
     </div>
 
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasRightLabel">Add To Cart</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <div class="d-flex flex-column gap-4">
-                <div class="card p-1 d-flex flex-row gap-3 border-0 d-none">
-                    <img src="images/p1.jpg" alt="" class="rounded-3 shadow border border-2 border-white" style="width: 100px;">
-                    <div class="d-flex flex-column gap-2">
-                        <div class="d-flex justify-content-between">
-                            <span class="display-4 fs-5 text-secondary">Price: Rs20</span>
-                            <span class="display-4 fs-5 text-secondary">Total: Rs20</span>
-                        </div>
-                        <div class="input-group">
-                            <button class="input-group-text btn btn-sm btn-primary text-white"><i class="bi bi-dash"></i></button>
-                            <input type="number" min="1" value="1" class="form-control form-control-sm text-center">
-                            <button class="input-group-text btn btn-sm btn-primary text-white"><i class="bi bi-plus"></i></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="notfound d-flex flex-column gap-3 justify-content-center align-items-center">
-                    <img src="images/notfound.svg" alt="" class="w-50">
-                    <h1 class="display-4 text-center text-uppercase fs-2 text-secondary">Empty Cart</h1>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="offcanvasRight"></div>
 
 
     <footer></footer>
