--- a/products-detail.html
+++ b/products-detail.html
@@ -26,50 +26,129 @@
                 <div class="col-lg-6 col-md-6 d-flex justify-content-center mb-4">
                     <img src="images/p1.jpg" alt="" id="pImage">
                 </div>
-                <form action="" class="col-lg-6 col-md-6">
+                <div class="col-lg-6 col-md-6">
                     <h1 class="display-4 text-capitalize text-secondary" id="pName">product title</h1>
                     <p class="display-4 fs-5 text-capitalize">category: <span id="pCategory"></span></p>
                     <p><span class="display-4 fs-5 text-capitalize">description: </span> <span id="pDesc"></span></p>
                     <p class="display-4 fs-4 text-capitalize">price: Rs <span id="pPrice"></span></p>
-                    <p class="display-4 fs-4 text-capitalize d-flex gap-3 qtySection">quantity: <input type="number" class="w-25 form-control text-center" min="1" max="20" value="1" id="pQty" onchange="calcQty()" onkeyup="calcQty()" required></p>
+                    <p class="display-4 fs-4 text-capitalize d-flex gap-3 qtySection">quantity: <input type="number"
+                            class="w-25 form-control text-center" min="1" max="20" value="1" id="pQty"
+                            onchange="calcQty()" onkeyup="calcQty()" required></p>
+                    <button class="btn btn-outline-primary btn-lg text-capitalize px-5 mt-4 btnAddToCart">add to
+                        cart</button>
                     <button class="btn btn-primary btn-lg text-capitalize px-5 mt-4 btnBuy">buy now</button>
-                    <button class="btn btn-dark btn-lg text-capitalize px-5 mt-4 d-none btnOutStock" disabled>Out Of Stock</button>
-                </form>
+                    <button class="btn btn-dark btn-lg text-capitalize px-5 mt-4 d-none btnOutStock" disabled>Out Of
+                        Stock</button>
+                </div>
             </div>
         </div>
     </section>
 
     <footer></footer>
 
+    <div id="offcanvasRight"></div>
+
 </body>
 
 <script src="js/bootstrap.bundle.min.js"></script>
-<script src="js/component.script.js"></script>
+<script src="js/sweetalert2.min.js"></script>
 <script src="js/products.js"></script>
+<script src="js/component.script.js"></script>
+<script src="js/script.js"></script>
 <script>
     let url = new URL(window.location.href);
     let id = url.searchParams.get("id");
-    document.title = "Products | "+products[id].pName;
-    document.querySelector("#pImage").src = "images/"+products[id].pImage;
+    document.title = "Products | " + products[id].pName;
+    document.querySelector("#pImage").src = "images/" + products[id].pImage;
     document.querySelector("#pName").innerHTML = products[id].pName;
     document.querySelector("#pCategory").innerHTML = products[id].pCategory;
     document.querySelector("#pDesc").innerHTML = products[id].pDesc;
     document.querySelector("#pPrice").innerHTML = products[id].pPrice;
-    document.querySelector("#pQty").setAttribute("max",products[id].pQty);
-    document.querySelector("link[href='favicon.ico']").setAttribute("href","images/"+products[id].pImage);
+    document.querySelector("#pQty").setAttribute("max", products[id].pQty);
+    document.querySelector("link[href='favicon.ico']").setAttribute("href", "images/" + products[id].pImage);
 
-    if(products[id].pQty<1){
+    if (products[id].pQty < 1) {
         document.querySelector(".qtySection").classList.add("d-none");
         document.querySelector(".btnBuy").classList.add("d-none");
+        document.querySelector(".btnAddToCart").classList.add("d-none");
         document.querySelector(".btnOutStock").classList.remove("d-none");
     }
 
-    function calcQty(){
+    function calcQty() {
         let qty = document.querySelector("#pQty").value;
-        if(parseInt(qty)>1 && parseInt(qty)<=products[id].pQty){
+        if (parseInt(qty) > 0 && parseInt(qty) <= products[id].pQty) {
             let total = parseInt(products[id].pPrice) * parseInt(qty);
             document.querySelector("#pPrice").innerHTML = total;
         }
     }
+
+    const Toaster = Swal.mixin({
+        toast: true,
+        position: "top-end",
+        showConfirmButton: false,
+        timer: 3000,
+        timerProgressBar: true,
+        didOpen: (toast) => {
+            toast.onmouseenter = Swal.stopTimer;
+            toast.onmouseleave = Swal.resumeTimer;
+        }
+    });
+
+    let array = [];
+    document.querySelector(".btnAddToCart").onclick = () => {
+        if (sessionStorage.getItem("loginStatus")) {
+            if (localStorage.getItem("Auth")) {
+                if (localStorage.getItem("AddToCart")) {
+                    let addToCartData = JSON.parse(localStorage.getItem("AddToCart"));
+                    let addtoCartItemStatus = false;
+                    let addtoCartItemIndex;
+                    for (let i = 0; i < addToCartData.length; i++) {
+                        if (addToCartData[i].pid === parseInt(id) && addToCartData[i].uid === parseInt(sessionStorage.getItem("loginStatus"))) {
+                            addtoCartItemStatus = true;
+                            addtoCartItemIndex = i;
+                            break;
+                        }
+                    }
+
+                    if (addtoCartItemStatus) {
+                        addToCartData[addtoCartItemIndex].qty = parseInt(document.querySelector("#pQty").value);
+                        localStorage.setItem("AddToCart", JSON.stringify(addToCartData));
+                        Toaster.fire({
+                            icon: "success",
+                            title: "Product Updated To Cart!!!"
+                        });
+                    } else {
+                        addToCartData.push({
+                            pid: parseInt(id),
+                            uid: parseInt(sessionStorage.getItem("loginStatus")),
+                            qty: parseInt(document.querySelector("#pQty").value)
+                        });
+                        localStorage.setItem("AddToCart", JSON.stringify(addToCartData));
+                        Toaster.fire({
+                            icon: "success",
+                            title: "Product Added To Cart!!!"
+                        });
+                    }
+                } else {
+                    array.push({
+                        pid: parseInt(id),
+                        uid: parseInt(sessionStorage.getItem("loginStatus")),
+                        qty: parseInt(document.querySelector("#pQty").value)
+                    });
+                    localStorage.setItem("AddToCart", JSON.stringify(array));
+                    Toaster.fire({
+                        icon: "success",
+                        title: "Product Added To Cart!!!"
+                    });
+                }
+            }
+        } else {
+            Toaster.fire({
+                icon: "error",
+                title: "Please! Login First."
+            });
+        }
+    }
 </script>
+
 </html>
