--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password</title>
+    <title>Ecom Js | Forgot Password</title>
     <link rel="shortcut icon" href="images/logo.png">
     <link rel="stylesheet" href="css/config.css">
 </head>
