--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,9 @@
 </head>
 
 <body class="bg-light">
+    <div class="preloader active">
+        <div class="spinner-border text-primary" role="status"></div>
+    </div>
     <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
         <main class="form-signin col-lg-4 col-md-5 text-center">
             <form>
