--- a/login.html
+++ b/login.html
@@ -46,4 +46,5 @@
 </body>
 <script src="js/sweetalert2.min.js"></script>
 <script src="js/login-validation.script.js"></script>
+<script src="js/script.js"></script>
 </html>
