--- a/signup.html
+++ b/signup.html
@@ -55,4 +55,5 @@
 </body>
 <script src="js/sweetalert2.min.js"></script>
 <script src="js/signup-validation.script.js"></script>
+<script src="js/script.js"></script>
 </html>
